--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1 class="">Com o Combo+, você pode aproveitar a Alura+
         e o Alura Idiomas por um preço único.
     </h1>
+    <img class="combo-img" src="img/Combo.png" alt="imagem dos professores">
 </body>
 </html>
