--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>Alura Flix</title>
 </head>
 <body>
-    <h1 class="">Com o Combo+, você pode aproveitar a Alura+
-        e o Alura Idiomas por um preço único.
-    </h1>
-    <img class="combo-img" src="img/Combo.png" alt="imagem dos professores">
+    <section class="principal container">
+        <div class="container__caixa">
+            <h1>Com o Combo+, você pode aproveitar a Alura+
+                e o Alura Idiomas por um preço único.
+            </h1>
+            <img class="combo-img" src="img/Combo.png" alt="imagem combo">
+        </div>
+    </section>
 </body>
 </html>
