--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
                 e o Alura Idiomas por um preço único.
             </h1>
             <img class="combo-img" src="img/Combo.png" alt="imagem combo">
+
+            <a href="" class="container__botao">Assine por 12x de R$ 120,00</a>
+            <a href="" class="container__botao botao__secundario">Assinar somente o Alura+</a>
+            <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <img src="img/Pixel True Mockup 1.png" alt="Plataformas">
+        <div>
+            <h2 class="">Assista do seu jeito</h2>
         </div>
     </section>
 </body>
